--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.93.3",
     "@tanstack/react-query": "^5.90.20",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "motion": "^12.30.0",
     "next-themes": "^0.4.6",
